<resources>
    <string name="app_name">TaskGo</string>
    <string name="empty"></string>
    <string name="toast_twice_click_exit">再次点击退出应用</string>


    <string name="task_type_name_water_school_six">校六送水</string>
    <string name="task_type_name_water_school_four">校四送水</string>


    <string name="txt_address_number">宿舍号：</string>
    <string name="txt_address_build">宿舍楼：</string>
    <string name="txt_water_task_type">取水形式:</string>
    <string name="txt_water_task_type_send">送水上门</string>
    <string name="txt_water_task_type_self">自取</string>

    <string name="btn_verification_gain">重新获取</string>



    <string name="key_home_animation">key_home_animation</string>


    <!--mine主页面-->
    <string name="btn_mine_release_task">我发布的任务</string>
    <string name="btn_mine_after_number">个</string>
    <string name="btn_mine_receive_task">我接收的任务</string>
    <string name="txt_mine_real_name">实名认证</string>
    <string name="txt_mine_feedback">意见反馈</string>
    <string name="btn_mine_remind_setting">设置</string>
    <string name="btn_mine_edit">编辑资料</string>
    <string name="txt_mine_follow_title">我的关注</string>
    <string name="txt_mine_follow">关注</string>
    <string name="txt_mine_fans">粉丝</string>
    <string name="txt_mine_fans_title">我的粉丝</string>
    <string name="txt_mine_pleease_enter_feedback">请在此输入您的宝贵意见</string>
    <string name="btn_mine_submmit">提交</string>
    <string name="txt_mine_real_name_top">请按照样例样式进行拍照，保证照片清晰</string>
    <string name="txt_mine_setting">系统设置</string>
    <string name="btn_mine_remind_push">推送提醒</string>
    <string name="btn_mine_remind_voice">声音提醒</string>
    <string name="btn_mine_remind_shock">震动提醒</string>
    <string name="btn_mine_change_password">修改密码</string>
    <string name="btn_mine_about">关于TaskGo</string>
    <string name="btn_mine_exchange_account">切换账号</string>
    <string name="btn_mine_exit_systom">退出系统</string>
    <string name="txt_about">关于TaskGo</string>
    <string name="txt_mine_edit_data" >个人信息</string>
    <string name="txt_mine_photo">头像</string>
    <string name="txt_mine_name">名字</string>
    <string name="txt_mine_gender">性别</string>
    <string name="txt_mine_phone">手机</string>
    <string name="txt_mine_birth">生日</string>
    <string name="txt_mine_wechat">微信号</string>
    <string name="txt_mine_qq">QQ</string>
    <string name="txt_mine_if_real_name">是否已经认证</string>
    <string name="txt_mine_edit_data_name">昵称修改</string>
    <string name="txt_gender_man">男</string>
    <string name="txt_gender_woman">女</string>
    <string name="txt_update_password_title">修改密码</string>
    <string name="txt_forget_password_title">忘记密码</string>
    <string name="txt_mine_old_password">旧密码</string>
    <string name="txt_mine_new_password">新密码</string>
    <string name="txt_mine_repeat_password">重复新密码</string>
    <string name="txt_mine_change_password_success">修改成功</string>
    <string name="txt_gender_unknown">未知</string>

    <string name="error_upload_image_filed">图片上传失败</string>
    <string name="txt_mine_card">我的卡片</string>
    <string name="txt_card_number">已有数量：</string>
    <string name="txt_card_function">功能描述：</string>
    <string name="error_follower">关注数错误</string>
    <string name="error_fans">粉丝数错误</string>
    <string name="default_avater">http://oz3rf0wt0.bkt.clouddn.com/18-1-22/15799237.jpg</string>
    <string name="error_avater">头像错误，请更新</string>
    <string name="txt_default_follow">尚没有关注的人</string>
    <string name="txt_no_public_function">此功能暂未开放，敬请期待</string>
    <string name="txt_have_concentrate">已关注</string>
    <string name="txt_none_concentrate">关注</string>
    <string name="txt_concentrate_success">关注成功</string>
    <string name="txt_un_concentrate_success">取关成功</string>
    <string name="txt_default_fans">尚没有粉丝</string>
    <string name="dialog_add_photo_from_camera">拍照</string>
    <string name="dialog_add_photo_from_album">从相册中选择</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_change_mine_data_success">修改成功</string>
    <string name="txt_id_card_front">点击上传身份证正面照（带国徽）</string>
    <string name="txt_id_card_back">点击上传身份证背面照（带照片）</string>
    <string name="txt_submit_id_card">submit</string>
    <string name="txt_real_name">真实姓名</string>
    <string name="txt_real_name_no_name">请输入真实姓名</string>
    <string name="txt_real_name_no_front_page">请上传身份证正面照片（带国徽）</string>
    <string name="txt_real_name_no_back_page">请上传身份证背面照片（带照片）</string>
    <string name="txt_submit_success">提交成功</string>
    <string name="txt_please_input_advice">请在下方输入反馈：</string>
    <string name="txt_hint_advice">请输入不少于10个字的意见或者建议</string>
    <string name="txt_no_advice">请输入您的意见</string>
    <string name="txt_have_real_name">已实名认证</string>
    <string name="txt_money_package_title">零钱</string>
    <string name="txt_mine_money">我的零钱</string>
    <string name="txt_get_real_money">提现</string>
    <string name="txt_mine_money_package">钱包</string>
    <string name="txt_bind_bank">绑定银行卡</string>
    <string name="txt_no_function_get_money">功能暂未开放，敬请期待</string>
</resources>
