<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_real_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/btn_submmit_blue"
                    android:text="@string/txt_real_name"/>

                <EditText
                    android:id="@+id/edit_real_name"
                    android:layout_marginLeft="130dp"
                    android:layout_width="180dp"
                    android:layout_height="40dp"

                    />


            </RelativeLayout>


            
            <ImageView
                android:id="@+id/btn_submit_front_id_card"
                android:layout_width="300dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/img_id_card_front"
                android:layout_height="180dp"
                android:text="@string/txt_id_card_front"
                android:layout_centerHorizontal="true"/>
            

            <ImageView
                android:layout_below="@id/btn_submit_front_id_card"
                android:id="@+id/btn_submit_back_id_card"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="150dp"
                android:src="@drawable/img_id_card_back"
                android:text="@string/txt_id_card_back"
                android:layout_centerHorizontal="true"/>
            
            <Button
                android:layout_below="@id/btn_submit_back_id_card"
                android:id="@+id/btn_submit_id_card"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@color/btn_blue"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:text="@string/txt_submit_id_card"/>

            
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>