<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_money_coin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:text="@string/txt_mine_money"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/txt_money_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="220dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/get_real_money"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/bg_task_btn_blue"
            android:text="@string/txt_get_real_money"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_bind_bank"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="360dp"
            android:background="@drawable/bg_task_btn_gray"
            android:text="@string/txt_bind_bank"
            android:textColor="@color/white"/>
    </RelativeLayout>

</RelativeLayout>