<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_gray"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rlayout_mine_edit_photo"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:layout_marginTop="6dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_mine_photo"
                android:textColor="@color/text_mine_button"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="11dp"
                android:src="@drawable/ic_mine_arrow"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_portrait"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="220dp"
                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlayout_mine_edit_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_mine_name"
                android:textColor="@color/text_mine_button"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_mine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/img_mine_edit_name"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <ImageView
                android:id="@+id/img_mine_edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="11dp"
                android:src="@drawable/ic_mine_arrow"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlayout_mine_edit_gender"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_mine_gender"
                android:textColor="@color/text_mine_button"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_mine_edit_data_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/img_mine_edit_gender"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <ImageView
                android:id="@+id/img_mine_edit_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="11dp"
                android:src="@drawable/ic_mine_arrow"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_mine_phone"
                android:textColor="@color/text_mine_button"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_mine_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_mine_if_real_name"
                android:textColor="@color/text_mine_button"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_mine_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="11dp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>